log
Wed, Apr 16, 2025  8:59:06 AM: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair*)calloc(capacity,sizeof(Pair*));
                  ^
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:59:42 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d3b9bd1
Wed, Apr 16, 2025  9:39:31 AM: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
0bba591
Wed, Apr 16, 2025  9:44:10 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7bca441
